--- a/index.html
+++ b/index.html
@@ -5,14 +5,38 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Lista de Tarefas</title>
 </head>
 <body>
-    <input type="text" id="tarefaTxt"/>
-    <button type="button" id="incluir">Adicionar</button>
-    <h2>Lista de Tarefas</h2>
-    <ul id="listaTarefas">
-    </ul>
+    <div class="container col-12 col-lg-5">
+        <p class="title h1">Lista de Tarefas</p>
+        <hr>
+        <div class="card">
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-10">
+                            <input type="text" id="tarefaTxt" placeholder="Adicionar nova tarefa..." class="form-control form-control-lg"/>
+                        </div>
+                        <div class='col-1'>
+                            <button type="button" id="incluir" class="btn btn-primary button-align">Adicionar</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section>
+            <div class="card-content">
+                <div id="listaTarefas" class="container">
+                </div>
+            </div>
+            </section>
+        </div>
+
+    </div>
     <script type="text/javascript" src="app/app.js"></script>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
